# ccc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_TOKEN_ALLOCATION.md  INSTALLATION_BEST_PRACTICES.md  LICENSE  PROBLEM_SOLVING_REPORT.md  PUBLISHING.md  README.md  RELEASE.md  TOKEN_CALCULATION_FIX.md  analyze_tool_calls.py  ccdrc_fix.patch  ccdrc_shell_wrapper.sh  debug_final.py  debug_token_calc.py  demo-v1.2.sh  demo.sh  fix_terminal_state.py  fix_token_accurate.py  fix_token_calculation.py  fix_token_intelligent.py  fix_using_tokenizer.py  improved_token_calc.py  install.sh  install_best.sh  pyproject.toml  reinstall_fixed.sh  reverse_engineer_tokens.py  smart_tokenizer_calc.py  test_all_paths_verbose.py  test_big_compression.py  test_clear_screen.py  test_compression.py  test_current_behavior.sh  test_custom_tokens.py  test_dynamic_calculation.py  test_empty_input.py  test_exact_ccc.py  test_exact_ccdrc.py  (+22 more)
.github/: SETUP.md
.github/workflows/: ci.yml  publish.yml
ccc/: __init__.py  cli.py  extractor.py  history_cleaner.py  interactive_ui.py  interactive_ui_flexible.py  tool_call_sanitizer.py
ccdrc/: __init__.py  cli.py  extractor.py  extractor_improved.py  history_cleaner.py  interactive_ui.py  interactive_ui_flexible.py  tool_call_sanitizer.py
scripts/: ccc
tests/: test_extractor.py  test_integration.py  test_interactive_ui.py
