[project]
name = "ccc"
version = "3.9.0"
description = "Claude Context Resume Tool - Smart context extraction for Claude Code sessions"
authors = [
    {name = "jiangying000", email = ""},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "tiktoken>=0.5.0",
]
keywords = ["claude", "ai", "context", "token", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jiangying000/ccc"
Repository = "https://github.com/jiangying000/ccc"
Issues = "https://github.com/jiangying000/ccc/issues"

[project.scripts]
ccc = "ccc.cli:ccc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ccc"]